Home > About: Alignment issue fix

--- a/website/src/styles/Home.module.css
+++ b/website/src/styles/Home.module.css
@@ -177,7 +177,7 @@
   font-size: 1.5rem;
   line-height: 2;
   color: #e0e0e0;
-  text-align: justify;
+  text-align: left;
   margin-bottom: 1.5rem;
 }
 
